--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,26 @@
 version: '3.8'
+
 services:
+  mongo:
+    image: mongo
+    restart: always
+    ports:
+    - "27017:27017"
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: secret
+
+  mongo-express:
+    image: mongo-express
+    restart: always
+    ports:
+      - 8081:8081
+    environment:
+      ME_CONFIG_MONGODB_URL: mongodb://root:secret@mongo:27017/
+      ME_CONFIG_BASICAUTH_ENABLED: "true"
+      ME_CONFIG_BASICAUTH_USERNAME: mongoexpressuser
+      ME_CONFIG_BASICAUTH_PASSWORD: pass
+
   chroma:
     image: ghcr.io/chroma-core/chroma:latest
     ports:
@@ -9,3 +30,4 @@ services:
 
 volumes:
   chromadb_data:
+
