--- a/gemini-rag/src/main/resources/application-prod.properties
+++ b/gemini-rag/src/main/resources/application-prod.properties
@@ -20,13 +20,12 @@ spring.ai.vertex.ai.gemini.chat.options.model=gemini-2.5-flash
 spring.ai.vertex.ai.gemini.project-id=iaproject-463920
 spring.ai.vertex.ai.gemini.location=us-central1
 spring.ai.vertex.ai.gemini.model=gemini-2.5-flash
-#spring.ai.vertex.ai.gemini.api-key=
+spring.ai.vertex.ai.gemini.api-key=
 
 spring.ai.model.embedding.text=vertexai
 spring.ai.vertex.ai.embedding.text.options.task-type=RETRIEVAL_DOCUMENT
 
 #MongoDB Configuration (via Spring AI)
-#spring.data.mongodb.uri=mongodb://root:pass@localhost:27017
 spring.data.mongodb.uri=mongodb://root:secret@localhost:27017/ia-recruitment?authSource=admin
 spring.data.mongodb.database=ia-recruitment
 
