--- a/cv-ai-manager/package.json
+++ b/cv-ai-manager/package.json
@@ -15,7 +15,8 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-dropzone": "^14.3.8",
-    "react-hot-toast": "^2.6.0"
+    "react-hot-toast": "^2.6.0",
+    "react-to-print": "^3.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
